--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Brandon Quon</title>
 </head>
 <body>
-    
+    <div id="bio">
+        <p>Hello, I am Brandon Quon. I am currently a second year computer science student that finds backend and frontend interesting</p>
+    </div>
 </body>
 </html>
