--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Brandon Quon</title>
 </head>
 <body>
-    <div id="bio">
-        <p>Hello, I am Brandon Quon. I am currently a second year computer science student that finds backend and frontend interesting</p>
+    
+    <div id="taskbar">
+
+        
     </div>
+
+    <div id="intro-container">
+        <div id="bio">
+            <p>Hello, I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.</p>
+        </div>
+        <div id="picture">
+            <img src="placeholder.jpg" width="400" height="400">
+        </div>
+    </div>
+
 </body>
 </html>
