--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- https://docs.emmet.io/cheat-sheet/ use this for typing shortcuts -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,7 @@
     
     <div id="taskbar">
 
-        
+
     </div>
 
     <div id="intro-container">
