Added inspiration image and aspects to taskbar

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     
-    <div id="taskbar">
-
-
-    </div>
+    <ul id="taskbar">
+        <p>Brandon Quon</p>
+        <li><a href="#">Resume</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
 
     <div id="intro-container">
         <div id="bio">
