Added css to the spacing and styling of taskbar elements

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 </head>
 <body>
     
-    <ul id="taskbar">
-        <p>Brandon Quon</p>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Projects</a></li>
+    <ul class="taskbar">
+        <li><a href="#">Resume  |</a></li>
+        <li><a href="#">Projects  |</a></li>
         <li><a href="#">Contact</a></li>
     </ul>
 
