--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <li><a href="#">Contact</a></li>
     </ul>
 
-    <div id="intro-container">
-        <div id="bio">
+    <div class="introContainer">
+        <div class="bio">
             <p>Hello, I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.</p>
         </div>
-        <div id="picture">
+        <div class="picture">
             <img src="placeholder.jpg" width="400" height="400">
         </div>
     </div>
