made two containers to position within main profile container

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     </ul>
 
     <div class="introContainer">
-        <div class="bio">
-            <p>Hello, I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.</p>
-        </div>
         <div class="picture">
             <img src="placeholder.jpg" width="400" height="400">
+        </div>
+        <div class="bioContainer">
+            <div class="bio">
+                <p>Hello, I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.</p>
+            </div>
         </div>
     </div>
 
