changed placeholder and changing bio text styling

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </div>
         <div class="bioContainer">
             <div class="bio">
-                <p>Hello, I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.</p>
+                <p> <h1>Hello,</h1>
+                     I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.
+                </p>
             </div>
         </div>
     </div>
