fixed code style of the bio text

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
     <div class="introContainer">
         <div class="picture">
-            <img src="placeholder.jpg" width="400" height="400">
+            <img src="placeholder.jpg" width="500" height="500">
         </div>
         <div class="bioContainer">
             <div class="bio">
-                <p> <h1>Hello,</h1>
-                     I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.
+                <h1>Hello,</h1>
+                <h3>A Bit About Me:</h3>
+                <p>
+                    I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.
                 </p>
             </div>
         </div>
