--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
     <div class="introContainer">
         <div class="picture">
-            <img src="placeholder.jpg" width="500" height="500">
+            <img src="placeholder.jpg" width="450" height="450">
         </div>
         <div class="bioContainer">
             <div class="bio">
-                <h1>Hello,</h1>
+                <h1>Hello</h1>
                 <h3>A Bit About Me:</h3>
                 <p>
                     I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.
