Finalized text layout for now with changed placeholder text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>Hello</h1>
                 <h3>A Bit About Me:</h3>
                 <p>
-                    I am Brandon Quon. I am currently a second year computer science student that is self learning basic frontend with this website.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
             </div>
         </div>
