--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@500&family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    
+
     <title>Brandon Quon</title>
 </head>
 <body>
     
     <ul class="taskbar">
-        <li><a href="#">Resume |</a></li>
-        <li><a href="#">Projects  |</a></li>
-        <li><a href="#">Contact</a></li>
+        <div class="links">
+            <li><a href="#">Resume |</a></li>
+            <li><a href="#">Projects  |</a></li>
+            <li><a href="#">Contact</a></li>
+        </div>
+        <div class="name">
+            <li><a href="#">Brandon Quon</a></li>
+        </div>
     </ul>
 
     <div class="introContainer">
