Created footer div and the 4 divs it will contain

--- a/index.html
+++ b/index.html
@@ -40,5 +40,20 @@
         </div>
     </div>
 
+    <div class="footerContainer">
+        <div class="phone">
+
+        </div>
+        <div class="email">
+
+        </div>
+        <div class="socials">
+
+        </div>
+        <div class="unknown">
+            
+        </div>
+    </div>
+
 </body>
 </html>
