Formatted footer but still working on the formatting of contained divs

--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
             </div>
         </div>
     </div>
-
-    <div class="footerContainer">
+    
+    <footer class="footerContainer">
         <div class="phone">
-
+            <p>phone</p>
         </div>
         <div class="email">
-
+            <p>email</p>
         </div>
         <div class="socials">
-
+            <p>socials</p>
         </div>
         <div class="unknown">
-            
+            <p>unknown</p>
         </div>
     </div>
 
