--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
         </div>
     </div>
     
-    <footer class="footerContainer">
+    <!-- <footer class="footerContainer">
         <div class="phone">
-            <p>phone</p>
+            <h3>Phone</h3>
         </div>
         <div class="email">
-            <p>email</p>
+            <h3>Email</h3>
         </div>
         <div class="socials">
-            <p>socials</p>
+            <h3>Follow Me</h3>
         </div>
-        <div class="unknown">
-            <p>unknown</p>
+        <div class="tbd">
+            <h3>TBD</h3>
         </div>
-    </div>
+    </div> -->
 
 </body>
 </html>
