Fixed naming and commented out footer

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         </div>
     </ul>
 
-    <div class="introContainer">
+    <div class="intro-container">
         <div class="picture">
             <img src="placeholder.jpg" width="450" height="450">
         </div>
-        <div class="bioContainer">
+        <div class="bio-container">
             <div class="bio">
                 <h1>Hello</h1>
                 <h3>A Bit About Me:</h3>
@@ -54,6 +54,10 @@
             <h3>TBD</h3>
         </div>
     </div> -->
+
+    <div class="project-container">
+
+    </div>
 
 </body>
 </html>
