Created jumplink to new Project container/section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <ul class="taskbar">
         <div class="links">
             <li><a href="#">Resume |</a></li>
-            <li><a href="#">Projects  |</a></li>
+            <li><a href="#project-section">Projects  |</a></li>
             <li><a href="#">Contact</a></li>
         </div>
         <div class="name">
@@ -55,8 +55,8 @@
         </div>
     </div> -->
 
-    <div class="project-container">
-
+    <div class="project-container" id="project-section">
+        <p>RANDOM TEXT AREA ALJKFKLDJFLJFDKA</p>
     </div>
 
 </body>
