--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
     </div> -->
 
     <div class="project-container" id="project-section">
-        <p>RANDOM TEXT AREA ALJKFKLDJFLJFDKA</p>
+        <div class="project-header">
+            <h1>Projects</h1>
+        </div>
     </div>
 
 </body>
