Added placeholder imgs for the future project showcase and formatted its container

--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
         <div class="project-header">
             <h1>Projects</h1>
         </div>
+        <div class="example-container">
+            <div class="word-game">
+                <img src="placeholder.jpg" width="450" height="450">
+            </div>
+            <div class="casino-sim">
+                <img src="placeholder.jpg" width="450" height="450">
+            </div>
+            <div class="hackathon">
+                <img src="placeholder.jpg" width="450" height="450">
+            </div>  
+            <div class="hangman">
+                <img src="placeholder.jpg" width="450" height="450">
+            </div>
+        </div>
     </div>
 
 </body>
