--- a/index.html
+++ b/index.html
@@ -40,21 +40,6 @@
         </div>
     </div>
     
-    <!-- <footer class="footerContainer">
-        <div class="phone">
-            <h3>Phone</h3>
-        </div>
-        <div class="email">
-            <h3>Email</h3>
-        </div>
-        <div class="socials">
-            <h3>Follow Me</h3>
-        </div>
-        <div class="tbd">
-            <h3>TBD</h3>
-        </div>
-    </div> -->
-
     <div class="project-container" id="project-section">
         <div class="project-header">
             <h1>Projects</h1>
@@ -96,6 +81,21 @@
                 </div>
             </div>
             
+        </div>
+    </div>
+
+    <footer class="footerContainer">
+        <div class="phone">
+            <h3>Phone</h3>
+        </div>
+        <div class="email">
+            <h3>Email</h3>
+        </div>
+        <div class="socials">
+            <h3>Follow Me</h3>
+        </div>
+        <div class="tbd">
+            <h3>TBD</h3>
         </div>
     </div>
 
