--- a/index.html
+++ b/index.html
@@ -84,20 +84,23 @@
         </div>
     </div>
 
-    <footer class="footerContainer">
-        <div class="phone">
-            <h3>Phone</h3>
+    <footer>
+        <div class="footer-container">
+            <div class="phone">
+                <h3>Phone</h3>
+            </div>
+            <div class="email">
+                <h3>Email</h3>
+            </div>
+            <div class="socials">
+                <h3>Follow Me</h3>
+            </div>
+            <div class="tbd">
+                <h3>TBD</h3>
+            </div>
         </div>
-        <div class="email">
-            <h3>Email</h3>
-        </div>
-        <div class="socials">
-            <h3>Follow Me</h3>
-        </div>
-        <div class="tbd">
-            <h3>TBD</h3>
-        </div>
-    </div>
+    </footer>
+
 
 </body>
 </html>
