--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
     <footer>
         <div class="footer-container">
             <div class="phone">
-                <h3>Phone</h3>
+                <h3>Phone:</h3>
+                
             </div>
             <div class="email">
                 <h3>Email</h3>
