--- a/index.html
+++ b/index.html
@@ -86,18 +86,34 @@
 
     <footer>
         <div class="footer-container">
-            <div class="phone">
-                <h3>Phone:</h3>
-                
+            <div class="phone-container">
+                <div class="phone-info">
+                    <h3>
+                        Phone: <br /> 
+                        xxx-xxx-xxxx
+                    </h3>
+                </div>
             </div>
-            <div class="email">
-                <h3>Email</h3>
+
+            <div class="email-container">
+                <h3>
+                    Email: <br /> 
+                    placeholder@gmail.com
+                </h3>
             </div>
-            <div class="socials">
-                <h3>Follow Me</h3>
+
+            <div class="socials-container">
+                <h3>
+                    Follow Me: <br /> 
+                    IGlink LINKEDIN?
+                </h3>
             </div>
-            <div class="tbd">
-                <h3>TBD</h3>
+
+            <div class="tbd-container">
+                <h3>
+                    TBD: <br /> 
+                    IDK SOME LOGO?
+                </h3>
             </div>
         </div>
     </footer>
