Added hover transform on project images

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <div class="picture-left">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
-                <div class="description-left">
+                <div class="word-info">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 <div class="picture-right">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
-                <div class="description-right">
+                <div class="casino-info">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
@@ -67,7 +67,7 @@
                 <div class="picture-left">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
-                <div class="description-left">
+                <div class="hackathon-info">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>  
@@ -76,7 +76,7 @@
                 <div class="picture-right">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
-                <div class="description-right">
+                <div class="hangman-info">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                 </div>
             </div>
