Fixed naming scheme of projects

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </div>
         <div class="example-container">
             <div class="word-game">
-                <div class="picture-left">
+                <div class="word-picture">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
                 <div class="word-info">
@@ -55,7 +55,7 @@
             </div>
 
             <div class="casino-sim">
-                <div class="picture-right">
+                <div class="casino-picture">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
                 <div class="casino-info">
@@ -64,7 +64,7 @@
             </div>
 
             <div class="hackathon">
-                <div class="picture-left">
+                <div class="hackathon-picture">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
                 <div class="hackathon-info">
@@ -73,7 +73,7 @@
             </div>  
 
             <div class="hangman">
-                <div class="picture-right">
+                <div class="hangman-picture">
                     <img src="placeholder.jpg" width="450" height="450">
                 </div>
                 <div class="hangman-info">
