Added jump link to contact/ to show footer

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="links">
             <li><a href="#">Resume |</a></li>
             <li><a href="#project-section">Projects  |</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#contacts">Contact</a></li>
         </div>
         <div class="name">
             <li><a href="#">Brandon Quon</a></li>
@@ -93,7 +93,7 @@
     </div>
 
     <footer>
-        <div class="footer-container">
+        <div class="footer-container" id="contacts">
             <div class="phone-container">
                 <div class="phone-info">
                     <h3>
