Added jumplink to top of page and changed cursor hover on .name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="#contacts">Contact</a></li>
         </div>
         <div class="name">
-            <li><a href="#">Brandon Quon</a></li>
+            <li><a href="#top">Brandon Quon</a></li>
         </div>
     </ul>
 
