--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="intro-container">
         <div class="picture">
-            <img src="placeholder.jpg" width="450" height="450">
+            <img src="images/placeholder.jpg" width="450" height="450">
         </div>
         <div class="bio-container">
             <div class="bio">
@@ -48,7 +48,7 @@
             <div class="word-game">
                 <div class="word-picture">
                     <a href="https://github.com/bnquon/Tkinter-Typing-Test" target="_blank">
-                        <img src="placeholder.jpg" width="450" height="450">
+                        <img src="images/placeholder.jpg" width="450" height="450">
                     </a>
                 </div>
                 <div class="word-info">
@@ -59,7 +59,7 @@
             <div class="casino-sim">
                 <div class="casino-picture">
                     <a href="https://github.com/bnquon/Casino-Game" target="_blank">
-                        <img src="placeholder.jpg" width="450" height="450">
+                        <img src="images/placeholder.jpg" width="450" height="450">
                     </a>
                 </div>
                 <div class="casino-info">
@@ -70,7 +70,7 @@
             <div class="hackathon">
                 <div class="hackathon-picture">
                     <a href="https://github.com/kimchi06/WarOfWords" target="_blank">
-                        <img src="placeholder.jpg" width="450" height="450">
+                        <img src="images/placeholder.jpg" width="450" height="450">
                     </a>
                 </div>
                 <div class="hackathon-info">
@@ -81,7 +81,7 @@
             <div class="hangman">
                 <div class="hangman-picture">
                     <a href="https://github.com/bnquon/Hangman" target="_blank">
-                        <img src="placeholder.jpg" width="450" height="450">
+                        <img src="images/placeholder.jpg" width="450" height="450">
                     </a>
                 </div>
                 <div class="hangman-info">
