Changing icon and formatting icon picture within the circle

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="intro-container">
         <div class="picture">
-            <img src="images/placeholder.jpg" width="450" height="450">
+            <img src="images/icon.jpg">
         </div>
         <div class="bio-container">
             <div class="bio">
