--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="word-game">
                 <div class="word-picture">
                     <a href="https://github.com/bnquon/Tkinter-Typing-Test" target="_blank">
-                        <img src="images/placeholder.jpg" width="450" height="450">
+                        <img src="images/typingTest.png" width="500" height="450">
                     </a>
                 </div>
                 <div class="word-info">
