Added casino exmaple but it doesnt vertically fit \

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="casino-sim">
                 <div class="casino-picture">
                     <a href="https://github.com/bnquon/Casino-Game" target="_blank">
-                        <img src="images/placeholder.jpg" width="450" height="450">
+                        <img src="images/casinoExample.png" width="500" height="450">
                     </a>
                 </div>
                 <div class="casino-info">
