Added and formatted final project picture (hangman)

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="hackathon">
                 <div class="hackathon-picture">
                     <a href="https://github.com/kimchi06/WarOfWords" target="_blank">
-                        <img src="images/placeholder.jpg" width="450" height="450">
+                        <img src="images/hackathonPic.png" width="550" height="450">
                     </a>
                 </div>
                 <div class="hackathon-info">
@@ -81,7 +81,7 @@
             <div class="hangman">
                 <div class="hangman-picture">
                     <a href="https://github.com/bnquon/Hangman" target="_blank">
-                        <img src="images/placeholder.jpg" width="450" height="450">
+                        <img src="images/hangman.png" width="550" height="450">
                     </a>
                 </div>
                 <div class="hangman-info">
