got rid of phone part of footer

--- a/index.html
+++ b/index.html
@@ -94,19 +94,10 @@
 
     <footer>
         <div class="footer-container" id="contacts">
-            <div class="phone-container">
-                <div class="phone-info">
-                    <h3>
-                        Phone: <br /> 
-                        xxx-xxx-xxxx
-                    </h3>
-                </div>
-            </div>
-
             <div class="email-container">
                 <h3>
                     Email: <br /> 
-                    placeholder@gmail.com
+                    bnquon@gmail.com
                 </h3>
             </div>
 
@@ -119,8 +110,8 @@
 
             <div class="tbd-container">
                 <h3>
-                    TBD: <br /> 
-                    IDK SOME LOGO?
+                    &copy; Brandon Quon <br /> 
+                    
                 </h3>
             </div>
         </div>
