--- a/index.html
+++ b/index.html
@@ -103,8 +103,10 @@
 
             <div class="socials-container">
                 <h3>
-                    Follow Me: <br /> 
-                    IGlink LINKEDIN?
+                    My Links: <br /> 
+                    <a href="https://github.com/bnquon" target="_blank">
+                        <img src="images/github.png" alt="" height="35" width="35">
+                    </a>
                 </h3>
             </div>
 
