--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                     <a href="https://github.com/bnquon" target="_blank">
                         <img src="images/github.png" alt="" height="35" width="35">
                     </a>
+                    <a href="#">
+                        <img src="images/Linkedin.png" alt="" height="35" width="35">
+                    </a>
                 </h3>
             </div>
 
