--- a/index.html
+++ b/index.html
@@ -104,12 +104,14 @@
             <div class="socials-container">
                 <h3>
                     My Links: <br /> 
-                    <a href="https://github.com/bnquon" target="_blank">
-                        <img src="images/github.png" alt="" height="35" width="35">
-                    </a>
-                    <a href="#">
-                        <img src="images/Linkedin.png" alt="" height="35" width="35">
-                    </a>
+                    <div class="icons">
+                        <a href="https://github.com/bnquon" target="_blank">
+                            <img src="images/github.png" height="33" width="33">
+                        </a>
+                        <a href="#">
+                            <img src="images/linkedin-logo.png" height="33" width="33">
+                        </a>
+                    </div>
                 </h3>
             </div>
 
