FINALLY FIGURED OUT HOW TO GET RID OF THE RANDOM LINE WITH THE GITHUB LOGO

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="footer-container" id="contacts">
             <div class="email-container">
                 <h3>
-                    Email: <br /> 
+                    Email Me: <br /> 
                     bnquon@gmail.com
                 </h3>
             </div>
@@ -105,20 +105,15 @@
                 <h3>
                     My Links: <br /> 
                     <div class="icons">
-                        <a href="https://github.com/bnquon" target="_blank">
-                            <img src="images/github.png" height="33" width="33">
-                        </a>
-                        <a href="#">
-                            <img src="images/linkedin-logo.png" height="33" width="33">
-                        </a>
+                        <a href="https://github.com/bnquon" target="_blank"><img src="images/github.png" height="33" width="33"></a>
+                        <a href="#"><img src="images/linkedin-logo.png" height="33" width="33"></a>
                     </div>
                 </h3>
             </div>
 
-            <div class="tbd-container">
+            <div class="copyright-container">
                 <h3>
-                    &copy; Brandon Quon <br /> 
-                    
+                    <br>&copy; Brandon Quon
                 </h3>
             </div>
         </div>
