Fixed copyright format and slightly shrunk icon image

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
             <div class="copyright-container">
                 <h3>
-                    <br>&copy; Brandon Quon
+                    &copy; Brandon Quon
                 </h3>
             </div>
         </div>
