Adding new section for upcoming work that will be two 2x1 grid next to each other

--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
         </div>
     </div>
 
+    <div class="upcoming-container">
+        <div class="left-grid">
+            <p>PLACEHOLDER TEXT</p>
+        </div>
+        <div class="right-grid">
+            <p>PLACEHOLDER TEXT</p>
+        </div>
+    </div>
+
+
     <footer>
         <div class="footer-container" id="contacts">
             <div class="email-container">
