Created grid in which the upcoming works title will be in then it will expand when hovered

--- a/index.html
+++ b/index.html
@@ -95,8 +95,10 @@
     <div class="upcoming-container">
         <div class="left-grid">
             <p>PLACEHOLDER TEXT</p>
+            <p>PLACEHOLDER TEXT</p>
         </div>
         <div class="right-grid">
+            <p>PLACEHOLDER TEXT</p>
             <p>PLACEHOLDER TEXT</p>
         </div>
     </div>
