Added divs for grid elements

--- a/index.html
+++ b/index.html
@@ -94,12 +94,20 @@
 
     <div class="upcoming-container">
         <div class="left-grid">
-            <p>PLACEHOLDER TEXT</p>
-            <p>PLACEHOLDER TEXT</p>
+            <div class="lgt">
+                <h4>Placeholder Text</h4>
+            </div>
+            <div class="lgb">
+                <h4>Placeholder Text</h4>
+            </div>
         </div>
         <div class="right-grid">
-            <p>PLACEHOLDER TEXT</p>
-            <p>PLACEHOLDER TEXT</p>
+            <div class="rgt">
+                <h4>Placeholder Text</h4>
+            </div>
+            <div class="rgb">
+                <h4>Placeholder Text</h4>
+            </div>
         </div>
     </div>
 
