Shrinking it to doing the initial code in the left grid to work in smaller chunks

--- a/index.html
+++ b/index.html
@@ -94,21 +94,24 @@
 
     <div class="upcoming-container">
         <div class="left-grid">
-            <div class="lgt">
+            <div class="lgt-face">
                 <h4>Placeholder Text</h4>
+                <div class="lgt-content">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
+                </div>
             </div>
-            <div class="lgb">
-                <h4>Placeholder Text</h4>
-            </div>
-        </div>
-        <div class="right-grid">
-            <div class="rgt">
-                <h4>Placeholder Text</h4>
-            </div>
-            <div class="rgb">
+            <div class="lgb-face">
                 <h4>Placeholder Text</h4>
             </div>
         </div>
+        <!-- <div class="right-grid">
+            <div class="rgt-face">
+                <h4>Placeholder Text</h4>
+            </div>
+            <div class="rgb-face">
+                <h4>Placeholder Text</h4>
+            </div>
+        </div> -->
     </div>
 
 
