--- a/index.html
+++ b/index.html
@@ -94,12 +94,15 @@
 
     <div class="upcoming-container">
         <div class="left-grid">
-            <div class="lgt-face">
-                <h4>Placeholder Text</h4>
-                <div class="lgt-content">
+            <div class="left-top">
+                <div class="left-topface">
+                    <h4>Placeholder Text</h4>
+                </div>
+                <div class="left-topcontent">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
                 </div>
             </div>
+
             <div class="lgb-face">
                 <h4>Placeholder Text</h4>
             </div>
