too complicated so just going to shrink it mroe into one block only for now

--- a/index.html
+++ b/index.html
@@ -98,23 +98,10 @@
                 <div class="left-topface">
                     <h4>Placeholder Text</h4>
                 </div>
-                <div class="left-topcontent">
+                <div class="upcoming-content">
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</p>
                 </div>
             </div>
-
-            <div class="lgb-face">
-                <h4>Placeholder Text</h4>
-            </div>
-        </div>
-        <!-- <div class="right-grid">
-            <div class="rgt-face">
-                <h4>Placeholder Text</h4>
-            </div>
-            <div class="rgb-face">
-                <h4>Placeholder Text</h4>
-            </div>
-        </div> -->
     </div>
 
 
