Going to try with only css and html

--- a/index.html
+++ b/index.html
@@ -92,6 +92,13 @@
         </div>
     </div>
 
+    <div class="face">
+        <h4>HOVER TO SHOW</h4>
+        <div class="content">
+
+        </div>
+    </div>
+
     <footer>
         <div class="footer-container" id="contacts">
             <div class="email-container">
@@ -118,8 +125,6 @@
             </div>
         </div>
     </footer>
-
-    <script src="script.js"></script>
 
 </body>
 </html>
