Added gengar gif

--- a/index.html
+++ b/index.html
@@ -152,6 +152,9 @@
         </div>
     </div>
     
+    <div class="gif">
+        <img src="images/gengar.gif" height="150" width="150">
+    </div>
 
     <footer>
         <div class="footer-container" id="contacts">
