--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="card-container">
             <div class="card">
                 <div class="face">
-                    <h3>HOVER</h3>
+                    <h3>Workout Tracker</h3>
                 </div>
                 <div class="content" hidden>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -127,7 +127,7 @@
             </div>
             <div class="card">
                 <div class="face">
-                    <h3>HOVER</h3>
+                    <h3>Java Game</h3>
                 </div>
                 <div class="content" hidden>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -135,7 +135,7 @@
             </div>
             <div class="card">
                 <div class="face">
-                    <h3>HOVER</h3>
+                    <h3>Mountain Madness</h3>
                 </div>
                 <div class="content" hidden>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
@@ -143,7 +143,7 @@
             </div>
             <div class="card">
                 <div class="face">
-                    <h3>HOVER</h3>
+                    <h3>This Website</h3>
                 </div>
                 <div class="content" hidden>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
